Prevent images getting squished on small screens

--- a/_yarn/scss/critical.scss
+++ b/_yarn/scss/critical.scss
@@ -262,6 +262,10 @@ html {
 
           section {
             line-height: 1.6em;
+            img { // Images get squished without this
+                width: auto;
+                height: auto;
+            }
           }
 
           h2 {
